Fix vertical-align on Chrome

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     display:inline-block;
     padding-right:2em;
     padding-bottom:2em;
+    vertical-align:top;
 }
 
 .html5_video_gallery_info {
